hotfix: 타임캡솝 현재기수 반영